# infinispan-vector

./: README.md  infinispan-noauth.xml  infinispan-noauth.yaml  infinispan.yaml  ispn_embed_demo.ipynb  ispn_news_demo.ipynb  ispn_sentences_demo.ipynb  pyproject.toml  question-answer-demo.ipynb  question-answer.ipynb  question-answer.py  similarity-search-demo-1.ipynb  similarity-search-demo-2.ipynb
infinispan_vector/: __init__.py  infinispan.py  infinispanvs.py
tests/integration_tests/vectorstores/: fake_embeddings.py  rgb_embeddings.py  test_infinispan.py  test_infinispanvs.py
