[tool.poetry]
name = "infinispan-vector"
version = "0.1.0"
description = ""
authors = ["rigazilla <vrigamon@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.350"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
