[tool.poetry]
name = "infinispan-vector"
version = "0.1.0"
description = ""
authors = ["rigazilla <vrigamon@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.354"
pytest = "^7.4.3"
fjson = "^0.1.6"
matplotlib = "^3.8.2"
sentence-transformers = "^2.2.2"
torch = "^2.1.2"
torchvision = "^0.16.2"
openai = "^1.10.0"
langchain-openai = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
